--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-node_modules/
-/test-results/
-/playwright-report/
-/playwright/.cache/
+.DS_Store
+node_modules
+/build
+/.svelte-kit
+/package
+.env
+.env.*
+!.env.example
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
